<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_username_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textAllCaps="true" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_toka_puertas"/>

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_gravity="left"
        android:text="@string/password"
        android:textAllCaps="true" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_juanitoalcachofa1234"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_gravity="left"
        android:text="@string/e_mail"
        android:textAllCaps="true" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ayuwoki_hee_hee_com"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_gravity="left"
        android:text="@string/gender"
        android:textAllCaps="true" />

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:textSize="@dimen/btn_textsize_send"
        android:layout_gravity="center"
        android:text="@string/send"/>

</LinearLayout>